gitops/apps/spring-demo/migration-routes/payment-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-service-migration
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: payment-service
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: payment-service
          group: ""
          kind: Service
          port: 80
          weight: 100
        - name: payment-service-cluster-b
          group: ""
          kind: Service
          port: 80
          weight: 0
